--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -2,14 +2,23 @@
 <project xmlns = "http://maven.apache.org/POM/4.0.0"
          xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>master-thesis</artifactId>
-        <groupId>vahy</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>thesis-parent</artifactId>
+    <artifactId>master-thesis-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>vahy</groupId>
+        <artifactId>master-thesis</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
+    <modules>
+        <module>../Commons</module>
+        <module>../HallwayGame</module>
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,10 +28,6 @@
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.12</slf4j.version>
     </properties>
-
-    <modules>
-        <module>../HallwayGame</module>
-    </modules>
 
     <dependencies>
         <!-- Logging -->
