--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,14 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <modules>
+        <module>Parent</module>
+    </modules>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
-
-    <modules>
-        <module>ThesisParent</module>
-        <module>HallwayGame</module>
-    </modules>
 
     <build>
         <plugins>
