Abstract state search interfaces for future usage

--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>../Commons</module>
         <module>../HallwayGame</module>
+        <module>../StateSpaceSearch</module>
     </modules>
 
     <properties>
