--- a/HallwayGame/pom.xml
+++ b/HallwayGame/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>master-thesis-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>vahy</groupId>
+            <artifactId>master-thesis-state-space-search</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
