--- a/HallwayGame/pom.xml
+++ b/HallwayGame/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>master-thesis-hallway-game</artifactId>
-    <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <!--<packaging>jar</packaging>-->
+    <!--<version>1.0-SNAPSHOT</version>-->
 
     <parent>
         <groupId>vahy</groupId>
@@ -26,6 +26,12 @@
             <artifactId>master-thesis-state-space-search</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
