--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -33,8 +33,9 @@
 
         <logback.version>1.1.11</logback.version>
         <slf4j.version>1.7.12</slf4j.version>
+        <testng.version>6.14.3</testng.version>
 
-        
+
     </properties>
 
     <dependencies>
@@ -52,6 +53,12 @@
             <version>${logback.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
