Added general reinforcement learning module, refactored model interfaces, generalized AbstarctTreePolicy

--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -19,6 +19,7 @@
         <module>../Commons</module>
         <module>../HallwayGame</module>
         <module>../StateSpaceSearch</module>
+        <module>../ReinforcementLearning</module>
     </modules>
 
     <properties>
