--- a/HallwayGame/pom.xml
+++ b/HallwayGame/pom.xml
@@ -8,6 +8,11 @@
     <!--<packaging>jar</packaging>-->
     <!--<version>1.0-SNAPSHOT</version>-->
 
+    <properties>
+        <dl4j.version>1.0.0-beta2</dl4j.version>
+        <nd4j.version>1.0.0-beta2</nd4j.version>
+    </properties>
+
     <parent>
         <groupId>vahy</groupId>
         <artifactId>master-thesis-parent</artifactId>
@@ -30,6 +35,17 @@
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-core</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-platform</artifactId>
+            <version>${nd4j.version}</version>
         </dependency>
 
     </dependencies>
