--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -24,9 +24,13 @@
 
     <properties>
 
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
-        <maven.compiler.release>9</maven.compiler.release>
+        <!--<maven.compiler.source>1.9</maven.compiler.source>-->
+        <!--<maven.compiler.target>1.9</maven.compiler.target>-->
+        <!--<maven.compiler.release>9</maven.compiler.release>-->
+
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>8</maven.compiler.release>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
