Okey another messy commit, but the main implementation is ready and now I can polish the code. Working example in prototype class

--- a/HallwayGame/pom.xml
+++ b/HallwayGame/pom.xml
@@ -37,6 +37,13 @@
             <version>1.5.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.tensorflow</groupId>
+            <artifactId>tensorflow</artifactId>
+            <version>1.11.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-core</artifactId>
