--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -51,6 +51,12 @@
             <version>1.16.11</version>
         </dependency>
 
+        <dependency>
+            <groupId>guru.nidi</groupId>
+            <artifactId>graphviz-java</artifactId>
+            <version>0.7.0</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
