--- a/TradingEnvironment/pom.xml
+++ b/TradingEnvironment/pom.xml
@@ -24,6 +24,12 @@
             <artifactId>master-thesis-state-space-search</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>vahy</groupId>
+            <artifactId>master-thesis-hallway-game</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
