--- a/MarketEnvironment/pom.xml
+++ b/MarketEnvironment/pom.xml
@@ -30,6 +30,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>vahy</groupId>
+            <artifactId>master-thesis-paper-sandbox</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
