--- a/HallwayGame/pom.xml
+++ b/HallwayGame/pom.xml
@@ -37,11 +37,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.jfree</groupId>-->
-            <!--<artifactId>jfreechart</artifactId>-->
-            <!--<version>1.5.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 
 </project>
