--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -15,4 +15,18 @@
         <relativePath>../Parent/pom.xml</relativePath>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jcommon</artifactId>
+            <version>1.0.16</version>
+        </dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
