--- a/StateSpaceSearch/pom.xml
+++ b/StateSpaceSearch/pom.xml
@@ -19,6 +19,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>guru.nidi</groupId>
+            <artifactId>graphviz-java</artifactId>
+            <version>0.8.0</version>
+        </dependency>
     </dependencies>
 
     <parent>
