--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -18,6 +18,9 @@
     <properties>
         <dl4j.version>1.0.0-beta2</dl4j.version>
         <nd4j.version>1.0.0-beta2</nd4j.version>
+        <tf.version>1.11.0</tf.version>
+        <jama.version>1.0.3</jama.version>
+        <CLP.version>1.16.11</CLP.version>
     </properties>
 
 
@@ -26,7 +29,7 @@
         <dependency>
             <groupId>org.tensorflow</groupId>
             <artifactId>tensorflow</artifactId>
-            <version>1.11.0</version>
+            <version>${tf.version}</version>
         </dependency>
 
         <dependency>
@@ -43,7 +46,7 @@
         <dependency>
             <groupId>com.quantego</groupId>
             <artifactId>clp</artifactId>
-            <version>1.16.11</version>
+            <version>${CLP.version}</version>
         </dependency>
 
         <dependency>
