--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -17,12 +17,21 @@
 
     <properties>
         <jama.version>1.0.3</jama.version>
+        <apache-commons-math3.version>3.2</apache-commons-math3.version>
         <jcommon.version>1.0.16</jcommon.version>
         <jfreechart.version>1.0.13</jfreechart.version>
         <commons-io.version>2.5</commons-io.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${apache-commons-math3.version}</version>
+        </dependency>
+
+
         <dependency>
             <groupId>gov.nist.math</groupId>
             <artifactId>jama</artifactId>
