Added episode analyzer

--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -23,6 +23,7 @@
         <module>../PaperSandbox</module>
         <module>../MarketEnvironment</module>
         <module>../RandomWalk</module>
+        <module>../EpisodeAnalyzer</module>
     </modules>
 
     <properties>
