--- a/RandomWalk/pom.xml
+++ b/RandomWalk/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>master-thesis-paper-sandbox</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>vahy</groupId>
+            <artifactId>master-thesis-hallway-game</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
