--- a/RandomWalk/pom.xml
+++ b/RandomWalk/pom.xml
@@ -35,6 +35,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>vahy</groupId>
+            <artifactId>episode-analyzer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
