Compiled TF 1.4.1 for my local

--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <dl4j.version>1.0.0-beta2</dl4j.version>
         <nd4j.version>1.0.0-beta2</nd4j.version>
-        <tf.version>1.12.0</tf.version>
+        <tf.version>1.14.1</tf.version>
         <jama.version>1.0.3</jama.version>
         <CLP.version>1.16.11</CLP.version>
     </properties>
@@ -26,11 +26,27 @@
 
     <dependencies>
 
+<!--        <dependency>-->
+<!--            <groupId>org.tensorflow</groupId>-->
+<!--            <artifactId>tensorflow</artifactId>-->
+<!--            <version>${tf.version}</version>-->
+<!--        </dependency>-->
+
+
+        <!-- -Djava.library.path=/...pathToBuild.../bazel-bin/tensorflow/tools/lib_package/libtensorflow_jni -->
+
         <dependency>
             <groupId>org.tensorflow</groupId>
-            <artifactId>tensorflow</artifactId>
-            <version>${tf.version}</version>
+            <artifactId>libtensorflow</artifactId>
+            <version>1.14.1</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.tensorflow</groupId>-->
+<!--            <artifactId>libtensorflow_jni</artifactId>-->
+<!--            <version>1.14.1.1</version>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.deeplearning4j</groupId>
