--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <dl4j.version>1.0.0-beta2</dl4j.version>
         <nd4j.version>1.0.0-beta2</nd4j.version>
-        <tf.version>1.14.1</tf.version>
+        <tf.version>1.15.0</tf.version>
         <jama.version>1.0.3</jama.version>
         <CLP.version>1.16.11</CLP.version>
     </properties>
@@ -26,20 +26,20 @@
 
     <dependencies>
 
-<!--        <dependency>-->
-<!--            <groupId>org.tensorflow</groupId>-->
-<!--            <artifactId>tensorflow</artifactId>-->
-<!--            <version>${tf.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.tensorflow</groupId>
+            <artifactId>tensorflow</artifactId>
+            <version>${tf.version}</version>
+        </dependency>
 
 
         <!-- -Djava.library.path=/...pathToBuild.../bazel-bin/tensorflow/tools/lib_package/libtensorflow_jni -->
 
-        <dependency>
-            <groupId>org.tensorflow</groupId>
-            <artifactId>libtensorflow</artifactId>
-            <version>1.14.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.tensorflow</groupId>-->
+<!--            <artifactId>libtensorflow</artifactId>-->
+<!--            <version>1.14.1</version>-->
+<!--        </dependency>-->
 
 <!--        <dependency>-->
 <!--            <groupId>org.tensorflow</groupId>-->
