--- a/StateSpaceSearch/pom.xml
+++ b/StateSpaceSearch/pom.xml
@@ -20,6 +20,13 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>vahy</groupId>
+            <artifactId>master-thesis-reinforcement-learning</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>guru.nidi</groupId>
             <artifactId>graphviz-java</artifactId>
             <version>0.8.0</version>
