actions have now indexes

--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -23,6 +23,7 @@
         <module>../PaperSandbox</module>
         <module>../RandomWalk</module>
         <module>../EpisodeAnalyzer</module>
+<!--        <module>../Examples</module>-->
     </modules>
 
     <properties>
