--- a/Parent/pom.xml
+++ b/Parent/pom.xml
@@ -21,6 +21,7 @@
         <module>../StateSpaceSearch</module>
         <module>../ReinforcementLearning</module>
         <module>../PaperSandbox</module>
+        <module>../MarketEnvironment</module>
         <module>../RandomWalk</module>
         <module>../EpisodeAnalyzer</module>
 <!--        <module>../Examples</module>-->
