--- a/StateSpaceSearch/pom.xml
+++ b/StateSpaceSearch/pom.xml
@@ -34,7 +34,7 @@
     </dependencies>
 
     <parent>
-        <artifactId>master-thesis-parent</artifactId>
+        <artifactId>master-thesis</artifactId>
         <groupId>vahy</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../Parent/pom.xml</relativePath>
