--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -12,7 +12,7 @@
         <groupId>vahy</groupId>
         <artifactId>master-thesis</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../Parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <properties>
