--- a/EpisodeAnalyzer/pom.xml
+++ b/EpisodeAnalyzer/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>master-thesis</artifactId>
         <groupId>vahy</groupId>
         <version>1.0-SNAPSHOT</version>
-	<relativePath>../Parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
