--- a/MarketEnvironment/pom.xml
+++ b/MarketEnvironment/pom.xml
@@ -10,7 +10,7 @@
         <groupId>vahy</groupId>
         <artifactId>master-thesis</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../Parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
