--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -7,7 +7,7 @@
         <groupId>vahy</groupId>
         <artifactId>master-thesis</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../Parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
