--- a/ReinforcementLearning/pom.xml
+++ b/ReinforcementLearning/pom.xml
@@ -20,7 +20,7 @@
         <groupId>vahy</groupId>
         <artifactId>master-thesis</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../Parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <build>
