--- a/StateSpaceSearch/pom.xml
+++ b/StateSpaceSearch/pom.xml
@@ -37,7 +37,7 @@
         <artifactId>master-thesis</artifactId>
         <groupId>vahy</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../Parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
 </project>
