--- a/PaperSandbox/pom.xml
+++ b/PaperSandbox/pom.xml
@@ -69,13 +69,18 @@
             <groupId>vahy</groupId>
             <artifactId>master-thesis-reinforcement-learning</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>vahy</groupId>
+            <artifactId>master-thesis-reinforcement-learning</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>vahy</groupId>
             <artifactId>master-thesis-state-space-search</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
 
     </dependencies>
