--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>PaperSandbox</module>
         <module>MarketEnvironment</module>
         <module>RandomWalk</module>
+        <module>SimplifiedHallway</module>
         <!--        <module>../Examples</module>-->
     </modules>
 
