WIP: StateSpaceSearch extensively modified to support multi player in the search tree. MCTS re-implemented

--- a/ReinforcementLearning/pom.xml
+++ b/ReinforcementLearning/pom.xml
@@ -59,7 +59,7 @@
                         </goals>
                     </execution>
                 </executions>
-                <inherited>false</inherited>
+<!--                <inherited>false</inherited>-->
                 <configuration>
                     <excludes>
                         <exclude>**/logback.xml</exclude>
