--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
         <logback.version>1.1.11</logback.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <testng.version>6.14.3</testng.version>
+        <junit.version>5.6.2</junit.version>
 
     </properties>
 
@@ -52,9 +52,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
