WIP: Convergence tests for reinf. learning repo.

--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -57,6 +57,12 @@
             <artifactId>guava</artifactId>
             <version>29.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.6.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
