--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -134,6 +140,14 @@
                         <target>13</target>
                         <release>13</release>
                         <!--                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.12.4</version>
+                    <configuration>
+                        <argLine>-XX:+UseParallelGC</argLine>
                     </configuration>
                 </plugin>
             </plugins>
