--- a/pom.xml
+++ b/pom.xml
@@ -153,9 +153,7 @@
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>2.22.2</version>
                     <configuration>
-                        <argLine>
-                            --illegal-access=permit -XX:+UseParallelGC -server
-                        </argLine>
+                        <argLine>--illegal-access=permit -XX:+UseParallelGC -server</argLine>
                     </configuration>
                 </plugin>
 
