--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -21,9 +21,18 @@
         <jcommon.version>1.0.16</jcommon.version>
         <jfreechart.version>1.0.13</jfreechart.version>
         <commons-io.version>2.5</commons-io.version>
+        <tf.version>1.15.0</tf.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.tensorflow</groupId>
+            <artifactId>tensorflow</artifactId>
+            <version>${tf.version}</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
