--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -21,17 +21,21 @@
         <jcommon.version>1.0.16</jcommon.version>
         <jfreechart.version>1.0.13</jfreechart.version>
         <commons-io.version>2.5</commons-io.version>
-        <tf.version>1.15.0</tf.version>
     </properties>
 
     <dependencies>
 
         <dependency>
             <groupId>org.tensorflow</groupId>
-            <artifactId>tensorflow</artifactId>
-            <version>${tf.version}</version>
+            <artifactId>tensorflow-core-api</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.tensorflow</groupId>
+            <artifactId>tensorflow-core-api</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+            <classifier>linux-x86_64</classifier>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
         <dependency>
