--- a/Commons/pom.xml
+++ b/Commons/pom.xml
@@ -4,11 +4,13 @@
          xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+
     <artifactId>master-thesis-commons</artifactId>
     <packaging>jar</packaging>
     <version>2.0-SNAPSHOT</version>
+<!--    <groupId>vahy</groupId>-->
 
-    <parent>
+        <parent>
         <groupId>vahy</groupId>
         <artifactId>master-thesis</artifactId>
         <version>2.0-SNAPSHOT</version>
@@ -21,6 +23,20 @@
         <jcommon.version>1.0.16</jcommon.version>
         <jfreechart.version>1.0.13</jfreechart.version>
         <commons-io.version>2.5</commons-io.version>
+
+        <java.version>13</java.version>
+        <logback.version>1.1.11</logback.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <junit.version>5.6.2</junit.version>
+
+
+
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencies>
